# nist-data-models

./: .gitignore  .hgignore  Makefile  README.md  pyproject.toml  pytest.ini
src/electos/datamodels/nist/indexes/: __init__.py  base.py  document_index.py  element_index.py
src/electos/datamodels/nist/models/: base.py
src/electos/datamodels/nist/models/cvr/: __init__.py
src/electos/datamodels/nist/models/edf/: __init__.py
src/electos/datamodels/nist/utility/: cases.py
test/electos/datamodels/nist/tests/: conftest.py
test/electos/datamodels/nist/tests/data/jetsons/: jetsons_main_cvr.json  jetsons_main_edf.json
test/electos/datamodels/nist/tests/models/base/: test_fields.py
test/electos/datamodels/nist/tests/models/cvr/: test_cvr_basic_types.py  test_cvr_index.py  test_cvr_jetsons_files.py
test/electos/datamodels/nist/tests/models/edf/: test_edf_index.py  test_edf_jetsons_files.py
test/electos/datamodels/nist/tests/utility/: __init__.py  test_cases.py
tools/editorconfig/: make.editorconfig  root.editorconfig
tools/make/: build.make  coverage.make  root.make  tests.make
tools/mypy/: mypy.ini
tools/poetry/: poetry.toml  pyproject.toml
tools/pycoverage/: coveragerc
tools/pytest/: pytest.ini
