[build-system]

requires = [ "poetry>=1.0.0" ]
build-backend = "poetry.masonry.api"

[tool.poetry]

name = "electos.nist-datamodels"
version = "0.0.0"
description = "Dataclasses for NIST SP-1500 schemas"
authors = [ "Ion Y <ion@osetinstitute.org>" ]
packages = [
    { include = "electos/datamodels/nist", from = "src" }
]

[tool.poetry.dependencies]

# Mininum version to natively support dataclasses
python = "^3.7"

# Core libraries
pydantic = "1.8.2"
