[build-system]

requires = [ "poetry>=1.0.0" ]
build-backend = "poetry.masonry.api"

[tool.poetry]

name = "electos.nist-datamodels"
version = "0.0.2"
description = "Dataclasses for NIST SP-1500 schemas"
authors = [ "Ion Y <ion@osetinstitute.org>" ]
packages = [
    { include = "electos/datamodels/nist", from = "src" }
]

[tool.poetry.dependencies]

# Mininum version to natively support dataclasses
python = "^3.7"

# Core libraries
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]

# Testing
pytest = "~6.2.5"
pytest-mock = "~3.6.0"
coverage = "~5.5"
# Support 'importlib.resources.files'
importlib-resources = { version = "~5.2.2", python = "<= 3.9" }
